--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,3 @@
 1. Разграничить права доступа с помощью битовой маски [+].
+2. Реализовать класс Output с возможностью отдачи HTML/JSON/Файлов.
+3. Реализовать работу с memcached.
